feat(spread): 使用语义近似匹配推荐牌阵